fixs+layer zero docs

--- a/src/content/docs/tools/bridges/skale-ima/metaport.mdx
+++ b/src/content/docs/tools/bridges/skale-ima/metaport.mdx
@@ -3,8 +3,8 @@ title: Metaport
 description: Intro to Metaport
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
-import metaport from '../../../../assets/metaport-examples.png';
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
+import metaport from '../../../../../assets/metaport-examples.png';
 import { Image } from 'astro:assets';
 
 <ToolLayout
