--- a/src/content/docs/tools/data/the-graph.mdx
+++ b/src/content/docs/tools/data/the-graph.mdx
@@ -13,8 +13,6 @@ import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 >
 
 <Tabs>
-<TabItem label="Graph Node Service">
-</TabItem>
 <TabItem label="Self Hosted Graph Node">
 You can reach out to the Graph community to request a Graph node, or you may run your own Graph node. These instructions assume you are using a Testnet or Mainnet SKALE Chain and are running your own graph node.
 
@@ -184,6 +182,9 @@ Expected output:
   }
 }
 ```
+</TabItem>
+<TabItem label="Graph Node Service">
+Coming soon...
 </TabItem>
 </Tabs>
 
