--- a/src/content/docs/tools/libraries/index.mdx
+++ b/src/content/docs/tools/libraries/index.mdx
@@ -2,4 +2,31 @@
 title: Libraries
 description: Libraries on SKALE
 
+sidebar:
+  order: 0
 ---
+
+import { Card, CardGrid } from "@astrojs/starlight/components";
+
+<CardGrid>
+	<a style="text-decoration: none;"href="/tools/libraries/web">
+		<Card title="Web Libraries">
+			Web3 Web Libraries
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/tools/libraries/mobile">
+		<Card title="Mobile libraries">
+			Web3 Mobile libraries
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/tools/libraries/unity">
+		<Card title="Unity Libraries">
+			Web3 Unity Libraries
+		</Card>
+	</a>
+	<a style="text-decoration: none;"href="/tools/libraries/backend">
+		<Card title="Backend Libraries">
+			Web3 Backend Libraries
+		</Card>
+	</a>
+</CardGrid>
