--- a/src/content/docs/tools/libraries/unity/nethereum.mdx
+++ b/src/content/docs/tools/libraries/unity/nethereum.mdx
@@ -31,6 +31,8 @@ All Nethreum realeases can be found [here](https://github.com/Nethereum/Nethereu
 
 The following example showcases how to get the current balance of a wallet.
 
+
+**Get Balance Example**
 ``` csharp
 using System.Collections;
 using UnityEngine;
