--- a/src/content/docs/tools/wallets/mpc/thirdweb.mdx
+++ b/src/content/docs/tools/wallets/mpc/thirdweb.mdx
@@ -17,20 +17,19 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 **Package Install**
 
 <Tabs>
-<TabItem label="NPM">
+<TabItem label="npm">
 ```shell
 npm install @thirdweb-dev/react
 ```
 </TabItem>
-<TabItem label="Yarn">
+<TabItem label="yarn">
 ```shell
 yarn add @thirdweb-dev/react
 ```
 </TabItem>
 </Tabs>
 
-**Code**
-
+**Integration**
 ```javascript
 import {
   ThirdwebProvider,
