--- a/src/content/docs/tools/wallets/non-custodial/ledger.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/ledger.mdx
@@ -17,7 +17,7 @@ For more information check the following link https://developers.ledger.com/docs
 
 ## Implementation Example
 
-**NPM Packages**
+**Package Install**
 
 If you want to use a Ledger Nano S/X/S Plus with the USB protocol
 
@@ -30,8 +30,7 @@ If you want to use a Ledger Nano S/X/S Plus with the HID protocol
 npm install @ledgerhq/hw-transport-webhid
 ```
 
-**Implementation Code**
-
+**Integration**
 ```javascript
 import TransportWebUSB from '@ledgerhq/hw-transport-webusb'
 import Eth from '@ledgerhq/hw-app-eth'
