--- a/src/content/docs/tools/bridges/skale-ima/imajs.mdx
+++ b/src/content/docs/tools/bridges/skale-ima/imajs.mdx
@@ -3,7 +3,7 @@ title: IMA.js
 description: Intro to IMA.js
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
-import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
+import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
     introParagraph="IMA.JS is a Typescirpt/Javascript library which implements client for SKALE Interchain Messaging Agent (IMA)."
