--- a/src/content/docs/tools/gaming/index.mdx
+++ b/src/content/docs/tools/gaming/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tools
+title: Gaming
 description: Tools on SKALE
 
 sidebar:
@@ -8,48 +8,25 @@ sidebar:
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-
-## Explore Tools by Category
-
 <CardGrid>
-	<a style="text-decoration: none;"href="/tools/bridges">
-		<Card title="Oracles">
-			Enable messages and tokens to be moved with various bridges and libraries
+	<a style="text-decoration: none;"href="/tools/gaming/eidolon">
+		<Card title="Eidolon">
+			SKALE Unity SDK. Already prepared to accomodate all SKALE developers needs
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/contracts">
-		<Card title="Contracts">
-			Popular Contracts and Contract based Toling
+	<a style="text-decoration: none;"href="/tools/gaming/mirage">
+		<Card title="Mirage">
+			Web3 Unity and Unreal SDK
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/data">
-		<Card title="Data & Indexers">
-			Tooling to improve access to blockchain data
+	<a style="text-decoration: none;"href="/tools/gaming/emergence">
+		<Card title="Emergence">
+			Web3 Unity and Unreal SDK
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/gaming">
-		<Card title="Gaming SDKs">
-			Gaming SDKs for Web3 Games
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/libaries">
-		<Card title="EVM Libraries">
-			See commonly used EVM SDKs in languages like JavaScript, C#, and more
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/oracles">
-		<Card title="Oracles">
-			Access blockchain data and price feeds
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specifc">
-			Use libraries and packages built to improve using low level SKALE functionality
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets">
-		<Card title="Wallets">
-			Explore differnt non-custodial, custodial, and MPC wallets that support SKALE Chains
+	<a style="text-decoration: none;"href="/tools/gaming/web3unreal">
+		<Card title="Web3unreal">
+			Web3 Unreal SDK
 		</Card>
 	</a>
 </CardGrid>
