--- a/src/content/docs/tools/libraries/web/ethersv5.mdx
+++ b/src/content/docs/tools/libraries/web/ethersv5.mdx
@@ -21,19 +21,28 @@ Connect to Ethereum nodes over JSON-RPC, INFURA, Etherscan, Alchemy or Metamask
 
 ## Implementation Example
 
-**Package Install:**
+**Package Install**
+<Tabs>
+<TabItem label="npm">
 ```shell
 npm install ethers@5.7.2
 ```
+</TabItem>
+<TabItem label="yarn">
+```shell
+yarn add ethers@5.7.2
+```
+</TabItem>
+</Tabs>
 
-**Send Transaction**
+**Contract Call Example**
 ```typescript
 import { ethers } from 'ethers';
 import {contract_abi,contract_adress} from "./contract";
 import dotenv from 'dotenv'; 
 dotenv.config();
 
-const skale_provider = "https://staging-v3.skalenodes.com/v1/staging-fast-active-bellatrix";
+const skale_provider = "your skale rpc";
 const provider = new ethers.providers.JsonRpcProvider(skale_provider);
 const pk = process.env.PRIVATE_KEY || "";
 const signer = new ethers.Wallet(pk, provider);
