--- a/src/content/docs/tools/oracles/index.mdx
+++ b/src/content/docs/tools/oracles/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Tools
-description: Tools on SKALE
+title: Oracles
+description: Oracles on SKALE
 
 sidebar:
   order: 0
@@ -9,47 +9,15 @@ sidebar:
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
 
-## Explore Tools by Category
-
 <CardGrid>
-	<a style="text-decoration: none;"href="/tools/bridges">
-		<Card title="Oracles">
-			Enable messages and tokens to be moved with various bridges and libraries
+	<a style="text-decoration: none;"href="/tools/oracles/skale-connect">
+		<Card title="SKALE Connect">
+			SKALE Native Oracle
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/contracts">
-		<Card title="Contracts">
-			Popular Contracts and Contract based Toling
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/data">
-		<Card title="Data & Indexers">
-			Tooling to improve access to blockchain data
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/gaming">
-		<Card title="Gaming SDKs">
-			Gaming SDKs for Web3 Games
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/libaries">
-		<Card title="EVM Libraries">
-			See commonly used EVM SDKs in languages like JavaScript, C#, and more
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/oracles">
-		<Card title="Oracles">
-			Access blockchain data and price feeds
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specifc">
-			Use libraries and packages built to improve using low level SKALE functionality
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets">
-		<Card title="Wallets">
-			Explore differnt non-custodial, custodial, and MPC wallets that support SKALE Chains
+	<a style="text-decoration: none;"href="/tools/oracles/razor">
+		<Card title="Razor">
+			Decentralized Oracle offering price-feeds data
 		</Card>
 	</a>
 </CardGrid>
