--- a/src/content/docs/tools/skale/index.mdx
+++ b/src/content/docs/tools/skale/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tools
+title: SKALE
 description: Tools on SKALE
 
 sidebar:
@@ -9,47 +9,35 @@ sidebar:
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
 
-## Explore Tools by Category
-
 <CardGrid>
-	<a style="text-decoration: none;"href="/tools/bridges">
-		<Card title="Oracles">
-			Enable messages and tokens to be moved with various bridges and libraries
+	<a style="text-decoration: none;"href="/tools/skale/skale-nodes">
+		<Card title="SKALE Nodes">
+			Nodes on the SKALE Network
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/contracts">
-		<Card title="Contracts">
-			Popular Contracts and Contract based Toling
+	<a style="text-decoration: none;"href="/tools/skale/sfuel-station">
+		<Card title="sFUEL Station">
+			Faucet to get teh SKALE gas token, sFUEL
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/data">
-		<Card title="Data & Indexers">
-			Tooling to improve access to blockchain data
+	<a style="text-decoration: none;"href="/tools/skale/skale-proxy">
+		<Card title="SKALE Proxy">
+			Learn how to use a proxy to interact with SKALE Chains
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/gaming">
-		<Card title="Gaming SDKs">
-			Gaming SDKs for Web3 Games
+	<a style="text-decoration: none;"href="/tools/skale/archive-node">
+		<Card title="Archive Node">
+			Run your archive node and get access to the historical data of the chain
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/libaries">
-		<Card title="EVM Libraries">
-			See commonly used EVM SDKs in languages like JavaScript, C#, and more
+	<a style="text-decoration: none;"href="/tools/skale/blockscout">
+		<Card title="Blockscout">
+			Block explorer used on the SKALE Chains
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/oracles">
-		<Card title="Oracles">
-			Access blockchain data and price feeds
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specifc">
-			Use libraries and packages built to improve using low level SKALE functionality
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets">
-		<Card title="Wallets">
-			Explore differnt non-custodial, custodial, and MPC wallets that support SKALE Chains
+	<a style="text-decoration: none;"href="/tools/skale/full-sync-node">
+		<Card title="Full Sync Node">
+			Usefull technology to remove read 
 		</Card>
 	</a>
 </CardGrid>
