--- a/src/content/docs/tools/wallets/aggregator/wallet-connect.mdx
+++ b/src/content/docs/tools/wallets/aggregator/wallet-connect.mdx
@@ -13,17 +13,19 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 ## Implemention Example
 
+**Package Install**
 ```shell
 npm install --save web3 @walletconnect/web3-provider
 ```
 
+**Integration**
 ```javascript
 import WalletConnectProvider from "@walletconnect/web3-provider";
 import Web3 from 'web3';
 
 
 // Your setup information
-const endpoint = 'https://your.skale.endpoint';             // your SKALE Chain endpoint
+const endpoint = 'your_skale_network_rpc';             // your SKALE Chain endpoint
 const ethereumEndpoint = 'https://your.ethereum.endpoint'   // your Ethereum endpoint
 const skaleChainId = 123456                                 // chainId of your SKALE Chain
 
