--- a/src/content/docs/tools/wallets/custodial/stardust.mdx
+++ b/src/content/docs/tools/wallets/custodial/stardust.mdx
@@ -15,8 +15,9 @@ With this solution it's possible to create a frictionless user onboarding experi
 
 ## Implementation Example 
 
-The following example provides a number of examples on how to use Stardust WaaS. The default chain used is SKALE Chaos Testnet. For the full code repo go [here](https://github.com/Dirt-Road-Development/stardust-examples)
+The following example provides a number of examples on how to use Stardust WaaS. For the full code repo go [here](https://github.com/Dirt-Road-Development/stardust-examples)
 
+**Integration**
 ````javascript
 const { StardustCustodialSDK, StardustApp, StardustWallet } = require("@stardust-gg/stardust-custodial-sdk");
 const { STARDUST_API_KEY, RPC_URL } = require("../../config");
