--- a/src/content/docs/tools/wallets/index.mdx
+++ b/src/content/docs/tools/wallets/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Tools
-description: Tools on SKALE
+title: Wallets
+description: Wallets on SKALE
 
 sidebar:
   order: 0
@@ -8,48 +8,26 @@ sidebar:
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-
-## Explore Tools by Category
-
 <CardGrid>
-	<a style="text-decoration: none;"href="/tools/bridges">
-		<Card title="Oracles">
-			Enable messages and tokens to be moved with various bridges and libraries
+	<a style="text-decoration: none;"href="/tools/wallets/non-custodial">
+		<Card title="Non-Custodial Wallets">
+			Non-custodial wallets SKALE compatible
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/contracts">
-		<Card title="Contracts">
-			Popular Contracts and Contract based Toling
+	<a style="text-decoration: none;"href="/tools/wallets/custodial">
+		<Card title="Custodial Wallets">
+			Custodial wallets SKALE compatible
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/data">
-		<Card title="Data & Indexers">
-			Tooling to improve access to blockchain data
+	<a style="text-decoration: none;"href="/tools/wallets/mpc">
+		<Card title="MPC Wallets">
+			MPC wallets SKALE compatible
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/gaming">
-		<Card title="Gaming SDKs">
-			Gaming SDKs for Web3 Games
+	<a style="text-decoration: none;"href="/tools/wallets/aggregator">
+		<Card title="Aggregator">
+			Wallets aggregator tools SKALE compatible
 		</Card>
 	</a>
-	<a style="text-decoration: none;"href="/tools/libaries">
-		<Card title="EVM Libraries">
-			See commonly used EVM SDKs in languages like JavaScript, C#, and more
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/oracles">
-		<Card title="Oracles">
-			Access blockchain data and price feeds
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/skale">
-		<Card title="SKALE Specifc">
-			Use libraries and packages built to improve using low level SKALE functionality
-		</Card>
-	</a>
-	<a style="text-decoration: none;"href="/tools/wallets">
-		<Card title="Wallets">
-			Explore differnt non-custodial, custodial, and MPC wallets that support SKALE Chains
-		</Card>
-	</a>
+
 </CardGrid>
