--- a/src/content/docs/tools/wallets/non-custodial/coinbase.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/coinbase.mdx
@@ -13,18 +13,18 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 ## Implementation Example
 
-**Package Install:**
+**Package Install**
 ```shell
 npm install --save web3 @coinbase/wallet-sdk
 ```
-
+**Integration**
 ````javascript
 import CoinbaseWalletSDK from '@coinbase/wallet-sdk'
 import Web3 from 'web3'
 
 const APP_NAME = 'My Awesome App'
 const APP_LOGO_URL = 'https://example.com/logo.png'
-const SKALE_JSONRPC_URL = 'https://your.skale.endpoint'
+const SKALE_JSONRPC_URL = 'your_skale_network_rpc'
 const SKALE_CHAIN_ID = 123456
 
 // Initialize Coinbase Wallet SDK
