--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,13 +10,13 @@ hero:
     dark: ../../assets/skale_logo_w.svg
     file: ../../assets/skale_token_w.svg
   actions:
-    - text: New to SKALE?
+    - text: Build on SKALE
       link: /quick-start
-      icon: right-arrow
+      icon: laptop
       variant: primary
-    - text: Detailed Developer Docs
+    - text: Learn about SKALE
       link: /learn
-      icon: external
+      icon: open-book
 ---
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
@@ -26,18 +26,22 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 Not sure where to go? No worries! We have selected a few of the most commonly visited areas of our docs for you to begin exploring!
 
 <CardGrid>
-	<Card title="Quick Start" icon="add-document">
-		Learn about moving your new or existing project to SKALE
-	</Card>
-	<a style="text-decoration: none;"href="/learn/about-skale-network">
-		<Card title="Learn about SKALE" icon="information">
-			New to SKALE? Deep dive into SKALE without touching code
+	<a style="text-decoration: none; color: white;" href="/quick-start">
+		<Card title="Quick Start" icon="add-document">
+			Learn about moving your new or existing project to SKALE
 		</Card>
 	</a>
-	<Card title="Issues + Support" icon="error">
-		If you are having trouble building on SKALE, get support in [Discord](https://discord.com/invite/gM5XBy6)
+	<a style="text-decoration: none; color: white;" href="/learn/about-skale-network">
+		<Card title="Learn about SKALE" icon="information">
+			New to SKALE? <br />Learn more about the network here!
+		</Card>
+	</a>
+	<Card title="Support" icon="discord">
+		If you are having trouble building on SKALE, get support in the community [Discord](https://discord.com/invite/gM5XBy6)
 	</Card>
-	<Card title="Developer Deep Dive" icon="laptop">
-		For those looking to innovate and dive deep into the SKALE technical offerings
-	</Card>
+	<a href="/tools" style="text-decoration: none; color: white;">
+		<Card title="Tools" icon="puzzle">
+			Explore the tools offered across the SKALE Network and find the right fit for your project.
+		</Card>
+	</a>
 </CardGrid>
