Tweak Quick Start Verbage

--- a/src/content/docs/quick-start/index.mdx
+++ b/src/content/docs/quick-start/index.mdx
@@ -8,10 +8,10 @@ sidebar:
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-Welcome to the SKALE Quick Start guide!
+Welcome to SKALE!
 
-The **Quick Start** section focuses on helping you build or bring your application
-to SKALE by focusing on guiding you through everything you need step-by-step.
+This **Quick Start** section focuses on helping you build or bring your application
+to SKALE by working with you through a step-by-step process.
 
 ## The Process
 
@@ -22,7 +22,7 @@ selecting a SKALE Chain.
 <CardGrid stagger>
 	<a style="text-decoration: none;"href="/quick-start/select-a-chain">
 		<Card title="1. Select a SKALE Chain">
-			Select a SKALE Chain and grab some testnet tokens
+			Select a SKALE Chain and grab some testnet tokens and gas
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/quick-start/build">
