Add Link to Discord

--- a/src/content/docs/quick-start/select-a-chain.mdx
+++ b/src/content/docs/quick-start/select-a-chain.mdx
@@ -10,25 +10,9 @@ import { SelectChain } from "../../../components/SelectChain";
 import { GasAndTokens } from "../../../components/GasAndTokens";
 
 Select a chain from the options below to learn more about it. 
-If you don't feel it's the perfect fit, no worries, join us in [Discord]() for additional
+If you don't feel it's the perfect fit, no worries, join us in [Discord](https://discord.com/invite/gM5XBy6) for additional
 support on where to start building.
 
 <br />
 <SelectChain client:load />
-
 <GasAndTokens client:load />
-
-{/*<ToastContainer
-  position="bottom-right"
-  autoClose={5000}
-  hideProgressBar={false}
-  newestOnTop={false}
-  closeOnClick
-  rtl={false}
-  pauseOnFocusLoss
-  draggable
-  pauseOnHover
-  theme="dark"
-  zIndex={1000000}
-  client:load
-/>*/}
