Add Distribution Contract + Link to Onboarding Form

--- a/src/content/docs/quick-start/go-live.mdx
+++ b/src/content/docs/quick-start/go-live.mdx
@@ -8,6 +8,8 @@ description: Go Live
 If you are preparing to go live on to SKALE Mainnet, then
 the following steps can help expedite the process.
 
+### Onboarding 
+
 ### Showcase your Work
 
 First, start by heading over to the SKALE Network Discord channel.
