--- a/src/content/docs/quick-start/index.mdx
+++ b/src/content/docs/quick-start/index.mdx
@@ -20,18 +20,23 @@ for you to jump between. Jump ahead to a section or keep scrolling to learn more
 selecting a SKALE Chain.
 
 <CardGrid stagger>
+	<a style="text-decoration: none;"href="https://skale-notion-manager.onrender.com/dapp/form" target="_blank">
+		<Card title="1. Complete Onboarding Form">
+			Provide some key information to unlock support from the SKALE Community!
+		</Card>
+	</a>
 	<a style="text-decoration: none;"href="/quick-start/select-a-chain">
-		<Card title="1. Select a SKALE Chain">
+		<Card title="2. Select a SKALE Chain">
 			Select a SKALE Chain and grab some testnet tokens and gas
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/quick-start/build">
-		<Card title="2. Build">
+		<Card title="3. Build">
 			Learn more about the SKALE Specifics and ways to build or port your application.
 		</Card>
 	</a>
 	<a style="text-decoration: none;"href="/quick-start/go-live">
-		<Card title="3. Go-Live Process">
+		<Card title="4. Go-Live Process">
 			Ready to go-live? Learn about the processes to help take you to Mainnet
 		</Card>
 	</a>
