quick start broken links fix

--- a/src/content/docs/quick-start/build.mdx
+++ b/src/content/docs/quick-start/build.mdx
@@ -30,29 +30,29 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ### Tools
 <CardGrid>
-	<a style="text-decoration: none;" href="#">
+	<a style="text-decoration: none;" href="/tools/wallets">
 		<Card title="Wallets">
 			Explore the various wallet options available throughout the SKALE Ecosystem
 		</Card>
 	</a>
-	<a style="text-decoration: none;" href="#">
+	<a style="text-decoration: none;" href="/tools/bridges">
 		<Card title="Bridging">
 			Learn more about how to help facilitate bridging to or from a SKALE Chain
 		</Card>
 	</a>
-	<a style="text-decoration: none;" href="#">
+	<a style="text-decoration: none;" href="/tools/data">
 		<Card title="Data & Indexers">
 			Checkout the tools and options to help you utilize SKALE Chain data
 		</Card>
 	</a>
-	<a style="text-decoration: none;" href="#">
+	<a style="text-decoration: none;" href="/tools/libraries">
 		<Card title="Developer Tools">
 			Find the best tools to help you build and deploy dApps quickly
 		</Card>
 	</a>
 </CardGrid>
 <br />
-<a style="text-decoration: none;" href="#">
+<a style="text-decoration: none;" href="/tools">
 	<Card title="Explore More Tools">
 		Checkout the rest of the tools available on SKALE
 	</Card>
