tools code upodate + learn hubs fix

--- a/src/content/docs/learn/calypso.mdx
+++ b/src/content/docs/learn/calypso.mdx
@@ -24,11 +24,16 @@ any project.
 
 ## Projects on Calypso
 
+- Pixudi: https://pixudi.com
+- Untitled Platformer: https://untitledplatformer.io
+- Dmail Network: https://dmail.ai/ 
+- DripVerse Protocol: https://dripverse.org/ 
 - Clet.Domains: https://clet.domains
 - Collab.Land: https://collab.land
 - NFTrade: https://nftrade.com
-- Pixudi: https://pixudi.com
-- Untitled Platformer: https://untitledplatformer.io
+- ScoreDetect: https://www.scoredetect.com/ 
+- SIRKL: https://sirkl.io/
+- SOLO: https://app.thesolo.network/ 
 
 ## Official Links
 
