--- a/src/content/docs/learn/nebula.mdx
+++ b/src/content/docs/learn/nebula.mdx
@@ -24,17 +24,38 @@ This SKALE Chain being focused entirely on games and gaming utilities, Nebula is
 ## Projects on Nebula
 
 - 5TARS: https://5tars.io
+- Haven's Compass: https://www.havenscompass.com/
+- World of Dypians: https://www.worldofdypians.com/
+- Bit Hotel: https://bithotel.io/ 
+- Space Rush: https://spacerushodyssey.io/
+- Jump.Trade: https://www.jump.trade/
+- Heroes Battle Arena: https://heroesbattlearena.online/
+- Arena Games: https://arenavs.com/
+- CricSage: https://cricsage.jump.trade/
+- Spell of Genesis: https://spellsofgenesis.com/
+- Yomi: https://yomigames.gg/
+- Hurley Super Surfer: https://hurley.jump.trade/
 - Ballers City: https://ballers.fun
 - BoojaBaunga: https://boojabaunga.com
 - CryptoCrusades: https://cryptocrusades.io
 - dexGO: https://www.dexgo.club/en
 - Gamifly + Sportsfly: https://www.gamifly.co/
 - motoDEX: https://motodex.openbisea.com/?chain=skale
-- NFTb: https://nftb.io
+- Pixelrealm: https://pixelrealm.io/
 - SKALE Platformer: https://platformer.dirtroad.dev
 - STARZPLAY Fantasy Sports: https://games.starzplay.com
 - TankWarsZone: https://skale-play.tankwars.zone
 - VoxelVerse: https://www.voxelverse.ca
+- Chain Guardians: https://chainguardians.io/
+- Rise Online World: https://www.riseonlineworld.com/
+- Roco Finance: https://roco.finance/
+- War Eden: https://www.wareden.io/
+- Sportzchain: https://fans.sportzchain.com/
+- Hatchyverse: https://hatchyverse.com/
+- Paradise Brawl: https://benficaisland.com/
+- FusyFox: https://fusyfox.com/
+- FlokiCyberPunk: https://flokicyberpunk.com/
+- Zeus: https://devzeus.io/
 
 ## Official Links
 
