--- a/src/content/docs/tools/wallets/non-custodial/metamask.mdx
+++ b/src/content/docs/tools/wallets/non-custodial/metamask.mdx
@@ -28,7 +28,7 @@ let web3 = "";
 
 let switchToSKALE = {
   chainId: "your chain id", //decodes to 1351057110
-  chainName: "SKALEChaos Testnet",
+  chainName: "SKALE Chain name",
   rpcUrls: ["your_skale_network_rpc"],
   nativeCurrency: {
     name: "SKALE FUEL",
