--- a/src/content/docs/tools/libraries/mobile/web3dart.mdx
+++ b/src/content/docs/tools/libraries/mobile/web3dart.mdx
@@ -35,27 +35,33 @@ import 'package:http/http.dart';
 import 'package:web3dart/web3dart.dart';
 import 'package:path/path.dart' show join, dirname;
 import 'package:web_socket_channel/io.dart';
+import 'chains.dart';
 
 //Private Key
-const String privateKey ='place your key';
+const String privateKey ='your pk';
 
-// SKALE Chaos Chain RPC
-// For other SKALE Testnet chains check https://testnet.portal.skale.space/chains
-const String rpcUrl = 'your skale rpc';
+//Select which chain you want to use
+Chain? selected_SKALE_chain = chains[ChainKey.nebula];
+
+// SKALE Chain RPC
+String rpcUrl = selected_SKALE_chain?.chainInfo?.testnet.rpcUrl ?? "no url";
 // selected SKALE Chain ID
-const int chainId = your_skale_chain_id;
+int chainId = selected_SKALE_chain?.chainInfo?.testnet.chainId ?? 0;
 
 // ABI of ERC_721 example contract
-final File abiFile = File(join(dirname(Platform.script.path), 'nft_test_abi.json'));
+final File abiFile = File(join(dirname(Platform.script.path), 'abi.json'));
 
 
 Future<void> main() async {
+
   // start a client we can use to send transactions
   final client = Web3Client(rpcUrl, Client());
 
-  final EthereumAddress mint_to_address = EthereumAddress.fromHex('Address to receive Mint');
-  // Contract adddress deployed on SKALE Chaos Hub
-  final EthereumAddress contract_address = EthereumAddress.fromHex('0xcAC71B8faB274429f79F76213fd3BC190041CAA4');
+  final EthereumAddress mint_to_address = EthereumAddress.fromHex('address to mint to');
+
+  String adddress = selected_SKALE_chain?.chainInfo?.testnet.contracts[0].address ?? "no address";
+
+  final EthereumAddress contract_address = EthereumAddress.fromHex(adddress);
   
   //Credentials to sign tx
   final credentials = EthPrivateKey.fromHex(privateKey);
@@ -63,9 +69,9 @@ Future<void> main() async {
   //ABI file as string
   final abiCode = await abiFile.readAsString();
   
-  final contract = DeployedContract(ContractAbi.fromJson(abiCode, 'NFT_721'), contract_address);
+  final contract = DeployedContract(ContractAbi.fromJson(abiCode, 'MyToken'), contract_address);
   //Selected contract function to call
-  final mintFunction = contract.function('_mintTest');
+  final mintFunction = contract.function('mintTest');
 
   // Mint function call
   //Note: The chainId needs to be passes otherwise it will throw the error: -32004 Invalid transaction signature.
