--- a/src/content/docs/tools/libraries/web/ethersv5.mdx
+++ b/src/content/docs/tools/libraries/web/ethersv5.mdx
@@ -38,22 +38,26 @@ yarn add ethers@5.7.2
 **Contract Call Example**
 ```typescript
 import { ethers } from 'ethers';
-import {contract_abi,contract_adress} from "./contract";
-import dotenv from 'dotenv'; 
+import {abi} from "./contract";
+import {chains} from "./chains"
+import dotenv from 'dotenv';
 dotenv.config();
 
-const skale_provider = "your skale rpc";
+//Select the SKALE chain you want to use
+const selected_chain = chains.nebula;
+
+const skale_provider = selected_chain.chainInfo.testnet.rpcUrl;
 const provider = new ethers.providers.JsonRpcProvider(skale_provider);
+
 const pk = process.env.PRIVATE_KEY || "";
 const signer = new ethers.Wallet(pk, provider);
 
-const contract = new ethers.Contract(contract_adress, contract_abi, signer);
+const contract = new ethers.Contract(selected_chain.chainInfo.testnet.contracts[0].address, abi, signer);
 
 // Send transaction to smart contract to update message
-
 async function ContractSendTx() {
-    const data = await contract.populateTransaction._mintTest(signer.address);
-    data.gasLimit = ethers.BigNumber.from(500000);
+    const data = await contract.populateTransaction.mintTest(signer.address);
+    data.gasLimit = ethers.BigNumber.from(100000);
     data.gasPrice = ethers.BigNumber.from(100000);
     data.nonce = await provider.getTransactionCount(signer.address);
 
@@ -63,7 +67,7 @@ async function ContractSendTx() {
     console.log(approveReceipt.transactionHash);
 
 }
-ContractSendTx();
+
 ```
 
 </ToolLayout>
