fixs + sfuel distribution tools examples

--- a/src/content/docs/tools/bridges/skale-native-brige.mdx
+++ b/src/content/docs/tools/bridges/skale-native-brige.mdx
@@ -9,26 +9,4 @@ import {Content as IMA} from './skale-ima/ima.mdx';
 import {Content as IMAJS} from './skale-ima/imajs.mdx';
 import {Content as METAPORT} from './skale-ima/metaport.mdx';
 
-## Not finalized! SKALE IMA needs simplier way to gather all info and more import easier way to start using
-
-<ToolLayout
-    introParagraph="SKALE makes it possible to manage tokens for end-users between Ethereum and your SKALE Chain. Users can use the Interchain Messaging Agent (IMA) (or SKALE IMA Bridge as it is also known) to transfer ETH, ERC-20, ERC-721 (NFTs), ERC-1155, Dai/USDC/USDT and others into a deposit box on Ethereum, where the IMA will then create clones of the token(s) on your SKALE Chain."
-    toolName="SKALE IMA"
-    toolLink=""
-    toolDocsLink=""
->
-
-<Tabs>
-<TabItem label="SKALE IMA Bridge">
-</TabItem>
-<TabItem label="SKALE IMA Library">
-<IMAJS/>
-</TabItem>
-<TabItem label="UI Bridge Implementation">
-</TabItem>
-<TabItem label="Bridge Widget">
-<METAPORT/>
-</TabItem>
-</Tabs>
-
-</ToolLayout>
+<IMA/>
