--- a/src/content/docs/tools/gaming/emergence.mdx
+++ b/src/content/docs/tools/gaming/emergence.mdx
@@ -27,7 +27,7 @@ It provides features such as:
 
 **Contract Call Example**
 ```c#
-public class NFTMInt : MonoBehaviour
+public class NFT_Mint : MonoBehaviour
 {
 
     public DeployedSmartContract deployedSmart;
